# cal

./: .cvsignore  .gitignore  .gitmodules  Makefile  Makefile.am  README.md  bisiesto.c  bisiesto.h  bootstrap.sh  cal.c  cal.man  cal.pot  cal2.c  configure.ac  dia_sema.c  dia_sema.h  en_GB.UTF-8.po  en_GB.po  en_GB.utf8.po  en_US.po  es_ES.ISO-8859-1.po  es_ES.UTF-8.po  es_ES.iso88591.po  es_ES.po  es_ES.utf8.po  fi_FI.UTF-8.po  fi_FI.po  fi_FI.utf8.po  leap.c  leap.h  makefile  nextday.c  nextday.h  pru.c  siguient.c  weekday.c  weekday.h
