# $Id: Makefile.am,v 1.1 2004/12/04 21:37:07 luis Exp $
# AUTHOR: Luis Colorado <luis.colorado@hispalinux.es>
# DATE: sáb dic  4 21:25:04 CET 2004
#

bin_PROGRAMS=cal ansical

cal_SOURCES=cal.c bisiesto.c dia_sema.c siguient.c
ansical_SOURCES=cal2.c bisiesto.c dia_sema.c siguient.c

# $Id: Makefile.am,v 1.1 2004/12/04 21:37:07 luis Exp $
