dnl $Id: configure.ac,v 1.2 2011/11/18 19:32:31 luis Exp $
dnl AUTHOR: Luis Colorado <luis.colorado@hispalinux.es>
dnl DATE: sáb dic  4 21:34:57 CET 2004

AC_INIT(
	cal,
	1.0,
	luis.colorado@hispalinux.es,
	cal.tar.gz)

LT_INIT

PACKAGE="@AC_PACKAGE_NAME@"
VERSION="@AC_PACKAGE_VERSION@"

AC_SUBST(PACKAGE)
AC_SUBST(VERSION)

AM_INIT_AUTOMAKE

AC_PROG_CC
AC_PROG_INSTALL

AC_OUTPUT(Makefile)

dnl $Id: configure.ac,v 1.2 2011/11/18 19:32:31 luis Exp $
